# SuchMusic

./: package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Bottom.vue  Header.vue  Search.vue  Silder.vue  Spectrum.vue  SvgIcon.vue  Titlebar.vue
src/components/views/: LocalSongs.vue  PlayList.vue  TimeSongs.vue  TopAlbums.vue
src/components/views/Album/: Album.vue
src/components/views/Settings/: AudioFrom.vue  AudioSource.ts  Play.vue  qingning.js  such.js
src/components/views/SonusLyrics/: Background.vue  Lyrics.vue  PlayerBottom.vue
src/stores/: audio.ts  player.ts  recentlyPlayed.ts  search.js  ui.ts
src/styles/: flex.css
